crates/ty_server/tests/e2e/tsp/snapshots/e2e__tsp__get_type__get_type_list_indexing.snap
---
source: crates/ty_server/tests/e2e/tsp/get_type.rs
expression: normalize_for_snapshot(list_index_result)
---
{
  "aliasName": null,
  "category": 0,
  "categoryFlags": 0,
  "flags": 0,
  "handle": "test_handle_Dynamic(Todo(TodoType(/"list literal element type/"",
  "name": "Dynamic(Todo(TodoType(/"list literal element type/""
}
